--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
 
-    <video id="bg-video" autoplay muted loop playsinline>
+    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="poster.JPG">
         <source src="media/video.mp4" type="video/mp4">
     </video>
 
@@ -269,4 +269,5 @@
         setInterval(addComment, 2000);
     </script>
 </body>
+
 </html>
