--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Live Streaming - Private Room</title>
+    <meta property="og:title" content="🔴 LIVE: Bocoran Video Viral Terbaru 2025">
+
+<meta property="og:description" content="Nonton full durasi tanpa sensor sebelum dihapus. Klik disini!">
+
+<meta property="og:image" content="https://skandal-viral.pages.dev/poster.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.jpg">
+
+<meta property="og:url" content="https://skandal-viral.pages.dev/">
+<meta property="og:type" content="website">
     <style>
         /* --- RESET & BASIC --- */
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -148,7 +159,7 @@
 </head>
 <body>
 
-    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="poster.JPG">
+    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="poster.jpg">
         <source src="media/video.mp4" type="video/mp4">
     </video>
 
@@ -271,3 +282,4 @@
 </body>
 
 </html>
+
