Fix HTML encoding issues and update image link

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <meta property="og:description" content="Nonton full durasi tanpa sensor sebelum dihapus. Klik disini!">
 
-<meta property="og:image" content="https://skandal-viral.pages.dev/poster.jpg">
+<meta property="og:image" content="https://skandal-viral.pages.dev/poster.JPG">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.jpg">
+<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.JPG">
 
 <meta property="og:url" content="https://skandal-viral.pages.dev/">
 <meta property="og:type" content="website">
@@ -282,4 +282,5 @@
 </body>
 
 </html>
+
 
