Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Live Streaming - Private Room</title>
     <meta property="og:title" content="🔴 LIVE: Bocoran Video Viral Terbaru 2025">
-
 <meta property="og:description" content="Nonton full durasi tanpa sensor sebelum dihapus. Klik disini!">
 
-<meta property="og:image" content="https://skandal-viral.pages.dev/poster.JPG">
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.JPG">
-
+<meta property="og:image" content="https://skandal-viral.pages.dev/poster.jpg">
 <meta property="og:url" content="https://skandal-viral.pages.dev/">
 <meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.jpg">
     <style>
         /* --- RESET & BASIC --- */
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -282,5 +280,6 @@
 </body>
 
 </html>
+
 
 
