--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="🔴 LIVE: Bocoran Video Viral Terbaru 2025">
 <meta property="og:description" content="Nonton full durasi tanpa sensor sebelum dihapus. Klik disini!">
 
-<meta property="og:image" content="https://skandal-viral.pages.dev/poster.jpg">
+<meta property="og:image" content="https://skandal-viral.pages.dev/poster.webp">
 <meta property="og:url" content="https://skandal-viral.pages.dev/">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.jpg">
+<meta name="twitter:image" content="https://skandal-viral.pages.dev/poster.webp">
     <style>
         /* --- RESET & BASIC --- */
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -157,7 +157,7 @@
 </head>
 <body>
 
-    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="poster.jpg">
+    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="poster.webp">
         <source src="media/video.mp4" type="video/mp4">
     </video>
 
@@ -280,6 +280,7 @@
 </body>
 
 </html>
+
 
 
 
