--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <body>
 
     <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="media/poster.webp">
-        <source src="media/video.mp4" type="video/mp4">
+        <source src="https://ik.imagekit.io/ownpkvvtv/Syaboba_Remes_Tobrut_Sambil_Colmek.mp4?updatedAt=1770033804053" type="video/mp4">
     </video>
 
     <div class="overlay"></div>
@@ -309,6 +309,7 @@ setTimeout(function() {
 </body>
 
 </html>
+
 
 
 
